Modified assignment files

--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     
     <button onclick="removeRow()">Remove Row</button>
     <button onclick="removeColumn()">Remove Column</button>  
+    <button onclick="fillUncolored()">Fill Uncolored Cells</button>  
+    <button onclick="fillAll()">Fill All Cells</button>  
 
     <select id="colorDropdown">
+        <option value="">None</option>
         <option value="red">Red</option>
         <option value="blue">Blue</option>
         <option value="green">Green</option>
