--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <button onclick="removeColumn()">Remove Column</button>  
     <button onclick="fillUncolored()">Fill Uncolored Cells</button>  
     <button onclick="fillAll()">Fill All Cells</button>  
+    <button onclick="restore()">Restore Color</button>  
 
     <select id="colorDropdown">
         <option value="">None</option>
@@ -24,6 +25,8 @@
         <option value="green">Green</option>
         <option value="yellow">Yellow</option>
     </select>
+
+
       
        
 </body>
